--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,14 @@ a {
   text-decoration: none;
 }
 
+
+/* Set your default so that the sizing and placement is predictable */
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+
+
+
+
