--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -15,6 +15,7 @@
    .main {
      text-align: center;
      position: relative;
+     margin-bottom: 50px;
    }
    
    /* Now set the height of your Footer equal to the padding that you left for it in your #root.  To make it stay at the bottom, you will set it to be absolutely positioned.  If Main grows larger, your Footer will move down to remain at the bottom of the page. */ 
