--- a/components/auth/auth-form.module.css
+++ b/components/auth/auth-form.module.css
@@ -98,27 +98,27 @@
   animation-delay: 2s;
 }
 
-#a1 {
+.a1 {
   animation-delay: 2s;
 }
 
-#a2 {
+.a2 {
   animation-delay: 2.1s;
 }
 
-#a3 {
+.a3 {
   animation-delay: 2.2s;
 }
 
-#a4 {
+.a4 {
   animation-delay: 2.3s;
 }
 
-#a5 {
+.a5 {
   animation-delay: 2.4s;
 }
 
-#a6 {
+.a6 {
   animation-delay: 2.5s;
 }
 
