--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,34 +1,36 @@
-/* Everything is a child of this node, so set its height to take up the full page or more, then set some padding at the bottom so your footer can slip into the gap. */
-.container {
-    position: relative;
-    min-height: 100vh;
-    padding-bottom: 100px;
-    display: grid;
+.grid1 {
+  display: grid;
+  width: 100vw;
+  margin: 0 auto;
+  min-height: 100vh;
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto 1fr auto;
+  grid-gap: 5px 5px;
+  
+  grid-template-areas: "header   header   header"
+                       "main     main     main"
+                       "footer   footer   footer";
+}
+
+/* items */
+
+
+
+/* specific item styles */
+
+.item1 {
+  grid-area: header;
+  height: 60px;
+  width: 100%;
+}
+.item2 {
+  grid-area: main;
   }
-.header {
-    position: relative;
-    height: 60px;
-    width: 100%;
-   }
-   
-   .main {
-     text-align: center;
-     position: relative;
-     margin-bottom: 50px;
-   }
-   
-   /* Now set the height of your Footer equal to the padding that you left for it in your #root.  To make it stay at the bottom, you will set it to be absolutely positioned.  If Main grows larger, your Footer will move down to remain at the bottom of the page. */ 
-   .footer {
-    font-family: 'Montserrat', sans-serif;
-    color:#E5E5E5;
-    box-sizing: Border-box;
-    background: #030303;
-    margin: 0px;
+.item3 {
+  background-color: black;
+    grid-area: footer;
     width: 100vw;
     height: auto;
-    position:absolute;
-    bottom:0;
-    text-align: center;
-    
-   }
+}
+
+
