--- a/components/layout/main-menu.module.css
+++ b/components/layout/main-menu.module.css
@@ -17,12 +17,13 @@
 }
 
 .container .logo {
-  max-width: 350px;
+  max-width: 200px;
   padding: 0 10px;
   overflow: hidden;
 }
 
 .container .logo a {
+  color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
