--- a/components/auth/auth-form.module.css
+++ b/components/auth/auth-form.module.css
@@ -25,8 +25,6 @@
   background-position: center;
 }
 
-
-
 .header > h2 {
   margin: 0;
   color: #4f46a5;
@@ -36,7 +34,7 @@
   margin-top: 10px;
   font-weight: normal;
   font-size: 15px;
-  color: rgba(0,0,0,.4);
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .form {
@@ -57,9 +55,9 @@
 .formfield {
   height: 46px;
   padding: 0 16px;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   outline: 0;
-  transition: .2s;
+  transition: 0.2s;
   margin-top: 20px;
 }
 
@@ -70,13 +68,12 @@
 .form > button {
   padding: 12px 10px;
   border: 0;
-  background: linear-gradient(to right, #de48b5 0%,#0097ff 100%); 
+  background: linear-gradient(to right, #de48b5 0%, #0097ff 100%);
   border-radius: 3px;
   margin-top: 10px;
   color: #fff;
   letter-spacing: 1px;
-  font-family: 'Rubik', sans-serif;
-
+  font-family: "Rubik", sans-serif;
 }
 
 .input {
@@ -93,7 +90,7 @@
 }
 .animation {
   animation-name: move;
-  animation-duration: .4s;
+  animation-duration: 0.4s;
   animation-fill-mode: both;
   animation-delay: 2s;
 }
