--- a/components/ui/button.module.css
+++ b/components/ui/button.module.css
@@ -1,76 +1,76 @@
- .btn {
-    padding: 1em 2.1em 1.1em;
-    border-radius: 3px;
-    margin: 8px 8px 8px 8px;
-    color: #fbdedb;
-    background-color: #fbdedb;
-    display: inline-block;
-    background: #e74c3c;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-    font-family: sans-serif;
-    font-weight: 800;
-    font-size: .85em;
-    text-transform: uppercase;
-    text-align: center;
-    text-decoration: none;
-    -webkit-box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
-    -moz-box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
-    box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
-    position: relative;
+.btn {
+  padding: 0.3em 1em 0.3em;
+  border-radius: 3px;
+  margin: 8px 8px 8px 8px;
+  color: #fbdedb;
+  background-color: #fbdedb;
+  display: inline-block;
+  background: #e74c3c;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: 0.85em;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  -webkit-box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  -moz-box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  position: relative;
 }
-.btn:hover, .btn:focus {
-    opacity: 0.8;
+.btn:hover,
+.btn:focus {
+  opacity: 0.8;
 }
 .btn:active {
-    -webkit-transform: scale(0.80);
-    -moz-transform: scale(0.80);
-    -ms-transform: scale(0.80);
-    -o-transform: scale(0.80);
-    transform: scale(0.80);
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  transform: scale(0.8);
 }
 .btn.block {
-    display: block !important;
+  display: block !important;
 }
 .btn.circular {
   border-radius: 50em !important;
 }
 
-
 /* Colours */
 .red {
-    background-color: #d55050;
+  background-color: #d55050;
 }
 .teal {
-    background-color: #50d5a1;
+  background-color: #50d5a1;
 }
 .sky {
-    background-color: #6698cb;
+  background-color: #6698cb;
 }
 .black {
-    background-color: #5c6166;
+  background-color: #5c6166;
 }
 .gray {
-    color: black;
-    background-color: #d2d2d2;
+  color: black;
+  background-color: #d2d2d2;
 }
 .orange {
-    background-color: #e96633;
+  background-color: #e96633;
 }
 .pink {
-    background-color: #cb99c5;
+  background-color: #cb99c5;
 }
 .green {
-    background-color: #5bbd72;
+  background-color: #5bbd72;
 }
 .blue {
-    background-color: #7abedf;
+  background-color: #7abedf;
 }
 .yellow {
-    background-color: #ecc92b;
+  background-color: #ecc92b;
 }
 .purple {
-    background-color: #564f8a;
+  background-color: #564f8a;
 }
