--- a/components/books/book-item.module.css
+++ b/components/books/book-item.module.css
@@ -1,76 +1,74 @@
 .item {
   margin: 0;
   padding: 0;
-  display:flex;
-   flex-direction:column;
-   align-items:center;
- }
- .item .img{
-   max-width: 200px;
-   max-height: 200px;
-   min-width:  50px;
-   min-height: 50px;
-  width:100%;
-  box-shadow:0 5px 7px rgba(0,0,0,.3);
-  transition:all .3s;
-  border-radius:5px;
-  border:3px solid #fff;
-  cursor:pointer;
-  transform:scale(0.9);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.item .title{
+.item .img {
+  max-width: 200px;
+  max-height: 200px;
+  min-width: 50px;
+  min-height: 50px;
+  width: 100%;
+  box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  cursor: pointer;
+  transform: scale(0.9);
+}
+.item .title {
   text-transform: uppercase;
   min-height: 40px;
-  color: #121a2f!important;
+  color: #121a2f !important;
   line-height: 1;
   font-weight: 700;
-  font-size: .9em;
-  display: flex!important;
+  font-size: 0.9em;
+  display: flex !important;
   outline: 0;
-    text-decoration: none;
-    background-color: transparent;
+  text-decoration: none;
+  background-color: transparent;
 }
-.item .autor{
+.item .autor {
   color: #929aad;
-  font-size: .65em;
-  padding-left: 0!important;
-  padding-right: 0!important;
-  margin-bottom: 0.5rem!important;
+  font-size: 0.65em;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-bottom: 0.5rem !important;
   -webkit-box-flex: 0;
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
 }
 
-.item p{
-  color:rgba(0,0,0,0.8);
-  font-family:arial;
-  letter-spacing:1px;
-  font-size: .9em;
+.item p {
+  color: rgba(0, 0, 0, 0.8);
+  font-family: arial;
+  letter-spacing: 1px;
+  font-size: 0.9em;
   text-align: justify;
 }
 
-.item .img:hover
-{
-  transform:scale(1);
-  box-shadow:0 8px 12px rgba(0,0,0,.5);
-  border-radius:5px;
-  outline:none;
-  border-color:tomato;
+.item .img:hover {
+  transform: scale(1);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  outline: none;
+  border-color: tomato;
 }
-.item .img:hover ~ p{
-  font-weight:bolder;
-  letter-spacing:1.5px;
+.item .img:hover ~ p {
+  font-weight: bolder;
+  letter-spacing: 1.5px;
 }
 
-
-@media (max-width:870px){ 
-   .item{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+@media (max-width: 870px) {
+  .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  .item .img{
-    width:90%;
+  .item .img {
+    width: 90%;
   }
 }
